# pennylane-learning-suite

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  seed_admin.py
backend/app/: config.py  main.py
backend/app/models/: db.py  schema.sql  types.py
backend/app/routers/: auth.py  emails.py  enquetes.py  entreprises.py  formateurs.py  parametres.py  questionnaires.py  sessions.py  stagiaires.py
backend/app/services/: auth.py  email.py  pdf.py  scheduler.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: SessionDetail.css  SessionDetail.jsx  SessionForm.css  SessionForm.jsx  TarifsTable.css  TarifsTable.jsx  ThematiqueCard.css  ThematiqueCard.jsx
frontend/src/components/documents/: Attestation.jsx  Convocation.jsx  Emargement.jsx  print.css  renderEmail.jsx
frontend/src/data/: api.js  auth.js  catalogue-afs.js  documents.js  formateurs.js  ids.js  questionnaires.js  sessions.js  stagiaires.js  traitement.js  veille.js
frontend/src/pages/: BanqueQuestions.css  BanqueQuestions.jsx  CatalogueAFS.css  CatalogueAFS.jsx  Documents.css  Documents.jsx  Login.css  Login.jsx  Passation.css  Passation.jsx  Sessions.css  Sessions.jsx  Stagiaires.css  Stagiaires.jsx  TableauDeBord.css  TableauDeBord.jsx  VeilleFormateur.css  VeilleFormateur.jsx  VeilleJuridique.css  VeilleJuridique.jsx  Webinaires.css  Webinaires.jsx
